chore: ultimo avanzado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <option value="Arquero">Arquero</option>
           <option value="Volante">Volante</option>
         </select>
-        <button type="button" id="submit">Agregar a la lista</button>
+        <button type="submit" id="submit">Agregar a la lista</button>
       </form>
       <button id="borrar">Borrar la lista</button>
       <p id="mensaje"></p>
